--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "app-build": "nx build frontend && nx test frontend --code-coverage",
+    "app-build": "nx build frontend",
+    "app-test": "nx test frontend --code-coverage",
     "app-run": "nx serve frontend",
-    "server-build": "nx build backend && nx test backend --code-coverage",
+    "server-build": "nx run backend:build",
+    "server-test": "nx test backend --code-coverage",
     "server-run": "nx serve backend",
     "full": "npm run app-build && npm run app-run && npm run server-build && npm run backend"
   },
